<resources>
    <string name="app_name">SAR-LB4.2-echoApp</string>
    <string name="Server">Server</string>
    <string name="message">message</string>
    <string name="Msg">Msg</string>
    <string name="switcherButton">Button</string>
    <string name="mssgButton">Button</string>
    <string name="Result">Connect for use the app...</string>
    <string name="on">on</string>
    <string name="off">off</string>
    <string name="send">send</string>
    <string name="Port">Port</string>
</resources>